# loggerli

./: LICENSE  README.md  example.py  pyproject.toml
src/loggerli/: log_record.py  logger.py  notifier.py
