[project]
name = "loggerli"
version = "0.0.1"
authors = [
  { name="Mushaheed Syed", email="hello@mushaheed.me" },
]
description = "A small light weight logger"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

