[project]
name = "loggerli"
version = "0.1.0"
authors = [
  { name="Mushaheed Syed", email="smushaheed@outlook.com" },
]
description = "This is a small light weight logger that provides APIs for debugging and error logging, similar to loggers in other languages, such as the Closure JS Logger and java.util.logging.Logger. The logs emitted can be listened by multiple listeners. This is completely based on pub.dev/packages/logging."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/predatorx7/loggerli"
"Bug Tracker" = "https://github.com/predatorx7/loggerli/issues"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

